ocp-argo-files/kibana/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kibana
  labels:
    app: kibana
    app.kubernetes.io/component: kibana
    app.kubernetes.io/instance: kibana
spec:
  to:
    kind: Service
    name: kibana
    weight: 100
  port:
    targetPort: 5601-tcp
  wildcardPolicy: None
